# AgenticRAG

./: .env.example  .gitignore  CHUNK_INGESTION_API.md  CRITICAL_BUG_ANALYSIS.md  MANIFEST.in  README.md  SECURITY.md  UPLOAD_ERROR_HANDLING_ISSUES.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_chunk_batch_endpoint.py  test_chunk_endpoint.py  test_document_creation_behavior.py
api/: __init__.py  _authentication.py  _dependencies.py  _middleware_logging.py  _models.py  main.py  models.py  test_api.py
api/_routes/: __init__.py  _admin.py  _conversation.py  _documents.py  _health.py  _knowledge_base.py  _mcp_server.py  _operations.py
docs/: API_DOCUMENTATION.md  DELETED_ITEMS_IMPLEMENTATION.md  DELETED_ITEMS_NON_QUERYABLE.md  DELETED_ITEMS_QUICK_REFERENCE.md  DEPLOYMENT_GUIDE.md  DOCUMENT_PROCESSING_PIPELINE.md  DUPLICATE_CHUNK_HANDLING.md  ENTITY_REACTIVATION.md  ENTITY_REACTIVATION_QUICK_REFERENCE.md  ENTITY_SCOPED_RAG_GUIDE.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_DELETE_FILTERING.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_REQUEST_TRACKING.md  MIGRATION_TO_JSON_STORAGE.md  OPTIMIZATION_SUMMARY.md  PARALLEL_FLOW_DIAGRAM.md  PARALLEL_OPTIMIZATION.md  PERSISTENCE_CHECKLIST.md  PERSISTENCE_GUIDE.md  PERSISTENCE_UPDATE_SUMMARY.md  QUICKSTART.md  QUICK_PARALLEL_REFERENCE.md  QUICK_START.md  README.md  README_ENTITY_SCOPED.md  REQUEST_TRACKING.md  REQUEST_TRACKING_QUICK_REFERENCE.md  RESEARCH_AGENT_UPDATE.md  SAME_ENTITY_UPLOAD.md  SERVICE_TRACKING_GUIDE.md  SERVICE_TRACKING_SUMMARY.md  TASK_COST_TRACKING.md  TASK_ID_FOR_QUERIES.md  TROUBLESHOOTING_ZERO_CHUNKS.md
docs/API/: API_DOCUMENTATION.md
docs/Agent/: AGENT_MCP_CLIENT_GUIDE.md  AGENT_MCP_CLIENT_QUICK_REFERENCE.md
docs/ChromaDB/: CHROMADB_DEVELOPMENT_GUIDE.md  CHROMADB_QUICK_START.md  CHROMADB_SINGLETON_USAGE.md
docs/Storage/ChromaDB/: CHROMADB_IMPLEMENTATION_SUMMARY.md  CHROMADB_S3_ARCHITECTURE.md
examples/: api_client.py  chromadb_example.py
src/: log_creator.py
src/config/: __init__.py  _settings.py  settings.py
src/core/: __init__.py  _data_indexer.py  _entity_scoped_rag.py  _manager.py  _models.py  _rag_system.py  entity_scoped_rag.py  manager.py  models.py  rag_system.py
src/core/_agents/: __init__.py  _agent_utils.py  _main_agent.py
src/core/_agents/_conversation_manager/: __init__.py  _manager.py  _message_storage.py
src/core/_agents/_tool_manager/: __init__.py  _manager.py
src/core/_agents/_tool_manager/_tools/: __init__.py  _base_tool.py  _variables.py
src/core/_agents/_tool_manager/_tools/text_editor/: __edit_history.py  __init__.py  _create_file.py  _edit_file.py  _file_line_insert.py  _undo_file_edit.py  _view.py
src/core/_agents/_tool_manager/_tools/user_kbs/: __init__.py  _user_kbs_get_chunk.py  _user_kbs_get_chunk_context.py  _user_kbs_get_next_chunk.py  _user_kbs_get_previous_chunk.py  _user_kbs_index.py  _user_kbs_list_all_kbs.py  _user_kbs_list_document_chunks.py  _user_kbs_list_kb_documents.py  _user_kbs_semantic_search.py
src/core/_agents/_tool_manager/_tools/workspace/: __init__.py  _bash_tool.py  _read_file.py  _show_files.py
src/core/_management/: __init__.py  _manager.py
src/core/_management/_sub_managers/: __init__.py  _conversation_manager.py  _knowledge_base_manager.py  _mcp_server.py
src/core/agents/: __init__.py  _custom_types.py  _research_agent.py  _research_agent_simple.py  company_research_agent.py  custom_types.py  research_agent.py  research_agent_simple.py
src/core/models/: _request_models.py  core_models.py  response_models.py
src/core/models/agent/: __init__.py  _custom_types.py  content_models.py  delta_models.py  message_models.py
src/core/models/operation_audit/: __init__.py  _models.py
src/infrastructure/: __init__.py  dynamic_thread_pool.py  ids.py  metrics.py
src/infrastructure/clients/: __init__.py  _file_processor_client.py  _model_client.py  file_processor_client.py
src/infrastructure/database/: __init__.py  _aws_rdsdb.py  _json_storage.py  _mongodb.py  mongodb.py
src/infrastructure/file_processor/: client.py
src/infrastructure/operation_logging/: README.md  __init__.py  operation_context.py
src/infrastructure/operation_logging/docs/: ADDITIONS_SUMMARY.md  BSON_OPTIMIZATION.md  DEPLOYMENT_GUIDE.md  DEVELOPER_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_EXAMPLE.md  OPERATION_UPDATES_GUIDE.md  TASK_STATUS_PATTERN.md  USAGE_BSON_MODELS.md  USAGE_GUIDE.md  parent_child_pattern.md
src/infrastructure/storage/: __init__.py  _chromadb_store.py  _json_storage.py  _s3_service.py  json_storage.py
src/infrastructure/utils/: __init__.py  _file_utils.py  _json_parser.py
src/utils/: __init__.py  _json_parser.py  _llm.py  json_parser.py  llm.py
tests/: test_api.py  test_chunk_batch_endpoint.py  test_chunk_endpoint.py  test_chunk_traversal.py  test_company_research_agent.py  test_document_creation_behavior.py  test_duplicate_detection.py  test_entity_scoped_rag.py  test_inc_operator.py  test_include_deleted.py  test_json_storage.py  test_openai.py  test_parallel_upload.py  test_request_tracking_filtering.py  test_research_agent_entity_scoped.py
tests/test_data/test_json_storage/test_storage/: atomic_test.json  users.json
