[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag"
version = "1.0.0"
description = "Agent-based Retrieval-Augmented Generation (RAG) system with ChromaDB vector storage, S3 integration, and agentic tool framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Prabhath Chellingi", email = "prabhathchellingi2003@gmail.com"}
]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "agents",
    "fastapi",
    "chromadb",
    "vector-search",
    "llm",
    "generative-ai",
    "tool-framework"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"

dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "attrs==25.4.0",
    "backoff==2.2.1",
    "bcrypt==5.0.0",
    "boto3==1.42.60",
    "botocore==1.42.60",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.4",
    "chromadb==1.5.2",
    "click==8.3.1",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "durationpy==0.10",
    "email-validator==2.3.0",
    "fastapi==0.135.1",
    "filelock==3.25.0",
    "flatbuffers==25.12.19",
    "frozenlist==1.8.0",
    "fsspec==2026.2.0",
    "googleapis-common-protos==1.72.0",
    "greenlet==3.3.2",
    "grpcio==1.78.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface_hub==1.5.0",
    "idna==3.11",
    "iniconfig==2.3.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "jiter==0.13.0",
    "jmespath==1.1.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "langchain-community==0.4.1",
    "langchain-core==1.2.17",
    "langchain-huggingface==1.2.1",
    "langchain-text-splitters==1.1.1",
    "langsmith==0.7.12",
    "lxml==6.0.2",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.3",
    "marshmallow==3.26.2",
    "mdurl==0.1.2",
    "mmh3==5.2.0",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "numpy==2.4.2",
    "oauthlib==3.3.1",
    "onnxruntime==1.24.2",
    "openai==2.24.0",
    "opentelemetry-api==1.40.0",
    "opentelemetry-exporter-otlp-proto-common==1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.40.0",
    "opentelemetry-proto==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-semantic-conventions==0.61b0",
    "orjson==3.11.7",
    "overrides==7.7.0",
    "packaging==26.0",
    "pathspec==1.0.4",
    "pillow==12.1.1",
    "platformdirs==4.9.2",
    "pluggy==1.6.0",
    "posthog==5.4.0",
    "propcache==0.4.1",
    "protobuf==6.33.5",
    "psutil==7.2.2",
    "pybase64==1.4.3",
    "pydantic==2.12.5",
    "pydantic-extra-types==2.11.0",
    "pydantic-settings==2.13.1",
    "pydantic_core==2.41.5",
    "Pygments==2.19.2",
    "pymongo==4.16.0",
    "PyMySQL==1.1.2",
    "PyPika==0.51.1",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.2",
    "python-magic==0.4.27",
    "python-multipart==0.0.22",
    "PyYAML==6.0.3",
    "referencing==0.37.0",
    "regex==2026.2.28",
    "reportlab==4.4.10",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==14.3.3",
    "s3transfer==0.16.0",
    "sentry-sdk==2.54.0",
    "setuptools==80.10.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.48",
    "starlette==0.52.1",
    "sympy==1.14.0",
    "tenacity==9.1.4",
    "tiktoken==0.12.0",
    "tokenizers==0.22.2",
    "tqdm==4.67.3",
    "typer==0.24.1",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "urllib3==2.6.3",
    "uvicorn==0.41.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websocket-client==1.9.0",
    "websockets==16.0",
    "xxhash==3.6.0",
    "yarl==1.23.0",
    "zstandard==0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.13.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
gpu = [
    "faiss-gpu==1.7.2",
    "torch==2.8.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/Prabhath003/AgenticRAG"
Repository = "https://github.com/Prabhath003/AgenticRAG.git"
Documentation = "https://github.com/Prabhath003/AgenticRAG#documentation"
Issues = "https://github.com/Prabhath003/AgenticRAG/issues"

[tool.setuptools]
packages = [
    "src",
    "src.config",
    "src.core",
    "src.core._agents",
    "src.core._agents._conversation_manager",
    "src.core._agents._tool_manager",
    "src.core._agents._tool_manager._tools",
    "src.core._agents._tool_manager._tools.text_editor",
    "src.core._agents._tool_manager._tools.user_kbs",
    "src.core._agents._tool_manager._tools.workspace",
    "src.core._management",
    "src.core._management._sub_managers",
    "src.core.models",
    "src.core.models.agent",
    "src.core.models.operation_audit",
    "src.infrastructure",
    "src.infrastructure.clients",
    "src.infrastructure.database",
    "src.infrastructure.operation_logging",
    "src.infrastructure.operation_logging.docs",
    "src.infrastructure.storage",
    "src.infrastructure.utils",
    "api",
    "api._routes",
]

[tool.setuptools.package-data]
src = ["**/*.py"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
no_error_summary = false
explicit_package_bases = true
